--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bunny-storage": "^1.1.1",
     "firebase": "^12.9.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.1.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
